--- a/public/css/home2.css
+++ b/public/css/home2.css
@@ -8383,9 +8383,11 @@ footer .copyright a {
     padding: 0 20px; } }
 .product-layout .product-item-container .product-image-container.second_img img{
     width: 100%;
-    height: 170px;
+    height: 170px !important;
 }
-
+.common-home .custom-slidercates.so-categories .cat-wrap .content-box .image-cat img{
+    height:130px;
+}
 .print{
     display: none !important;
 }
